[FIX] point_of_sale: change pos receipt item direction in rtl languages
Steps to reproduce:
1. In the general settings, add the Arabic(العربية) language
2. Install the POS (point of sales) module
3. Go to the administrator's profile and change Preferences > Languages to Arabic(العربية)
4. Open a new shop/pos session
5. Add any product
6. Click on payment(دفعة)  button
7. Choose the cash option under the payment method (طريقة الدفع)
8. Select a client (العميل)
9. Click on validate (تصديق)
10. Notice how the items format is incorrect, the quantity and price flipped and unreadable.

Investigation
- when switching to Arabic (an right to left language), the direction of the order line (price and quantity) was still ltr so the price and the quantity were flipped

opw-3580386

X-original-commit: 75cc7e99be9f4f73c42338c55d8c8a4eb40f33a2

--- a/addons/point_of_sale/static/src/css/pos_receipts.css
+++ b/addons/point_of_sale/static/src/css/pos_receipts.css
@@ -86,3 +86,8 @@
     width: 100%;
     justify-items: end;
 }
+
+.pos-receipt .orderlines {
+    /*rtl:ignore*/
+    direction: ltr;
+}
